# pfcnn

./: .gitignore  README.md
PFCNN/: FaustMatching.py  FaustMatching_args.py  FaustScanRregression.py  FaustScanRregression_args.py  HumanSeg.py  HumanSeg_args.py  PFCNN.py  Scannet.py  Scannet_args.py  ShrecClass.py  ShrecClass_args.py  layers.py  read_tfrecord_test.py  utils.py
PFCNN/Generate_Dataset/: FaustMatching_dataset.py  FaustScanRegression_dataset.py  HumanSeg_dataset.py  ShrecClass_dataset.py  augmentation.py  matrix_arg.py  preprocess_data_faust_matching.py  preprocess_data_faust_regression.py  read_data.py  write_tfrecords.py
pySurfaceHierarchy/: CMakeLists.txt
pySurfaceHierarchy/include/: ANNSearch.hpp  DirectionFields.hpp  HierarchyBuilder.hpp  MeshHierarchy.hpp  QEM_Decimator.hpp  SurfaceHierarchySerializer.hpp  TriMeshDef.hpp  calc_para.h
pySurfaceHierarchy/include/DT2D/: delabella.cpp  delabella.h  delaunay2d.h  speedtest.cpp
pySurfaceHierarchy/include/Geex/: CMakeLists.txt
pySurfaceHierarchy/include/Geex/basics/: line_stream.h  processor.cpp  processor.h  types.cpp
pySurfaceHierarchy/include/Geex/graphics/: color.h  geexapp.cpp  geexapp.h  geexob.cpp  geexob.h  opengl.cpp  opengl.h
pySurfaceHierarchy/include/Geex/mathematics/: glsl_linear.h  matrix.h  polygon2d.cpp  vecg.h
pySurfaceHierarchy/include/MathSuite/: ReadMe.txt  ThirdParty.txt
pySurfaceHierarchy/include/MathSuite/SPARSE/: CImg.h  Iterative_Solver.cpp  Iterative_Solver.h  Sparse_Config.h  Sparse_Elimination.cpp  Sparse_Elimination.h  Sparse_HLBFGS_QPSolver.cpp  Sparse_HLBFGS_QPSolver.h  Sparse_Matrix.cpp  Sparse_Matrix.h  Sparse_QPSolver.cpp  Sparse_QPSolver.h  Sparse_Solver.cpp  Sparse_Solver.h  blas.h  lapack.h  types.h
pySurfaceHierarchy/include/MathSuite/TAUCS/: taucs.h  taucs_config_build.h
pySurfaceHierarchy/include/MathSuite/lib64/: BLAS.lib  CARPACK.lib  SuiteSparseLib.lib  SuperLU.lib  libf2c.lib  libmetis.lib  libtaucs.lib
pySurfaceHierarchy/include/TNT/: readme.txt  tnt_linalg.h  tnt_matrix.h  tnt_vector.h  tnt_version.h
pySurfaceHierarchy/src/: DirectionFields.cpp  MeshHierarchy.cpp  QEM_Decimator.cpp  calc_para.cpp  pySurfaceHierarchy.cpp
pySurfaceHierarchy/src/TangentParam/: param_util.h  polynomial_conv.cpp  polynomial_conv.h  tangent_param.cpp  tangent_param.h
