
IF(WIN32)
  ADD_DEFINITIONS(-DGEEX_EXPORTS)
ELSE(WIN32)
  ADD_DEFINITIONS(-DBINARY_DIR=\\"${CMAKE_BINARY_DIR}\\")
  ADD_DEFINITIONS(-DPROJECT_ROOT=\\"${CMAKE_SOURCE_DIR}\\")
ENDIF(WIN32)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Geex/third_party/GL)

IF (CMAKE_CL_64)
SET(WIN32 0)
SET(WIN64 1)
ENDIF (CMAKE_CL_64)

IF (WIN32)
	LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/Geex/third_party/GL/LIB/x32)
ENDIF (WIN32)

IF (WIN64)
	LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/Geex/third_party/GL/LIB/x64)
ENDIF (WIN64)

ADD_DEFINITIONS(-DDLL_EXPORTS -D_CRT_SECURE_NO_WARNINGS)

AUX_SOURCE_DIRECTORY(basics SOURCES)
AUX_SOURCE_DIRECTORY(mathematics SOURCES)
AUX_SOURCE_DIRECTORY(properties SOURCES)
AUX_SOURCE_DIRECTORY(graphics SOURCES)

AUX_SOURCE_DIRECTORY(third_party/zlib SOURCES)
AUX_SOURCE_DIRECTORY(third_party/png SOURCES)
AUX_SOURCE_DIRECTORY(third_party/GLsdk SOURCES)
AUX_SOURCE_DIRECTORY(third_party/glut_viewer SOURCES)
AUX_SOURCE_DIRECTORY(third_party/glu SOURCES)
AUX_SOURCE_DIRECTORY(third_party/misc SOURCES)
INCLUDE_DIRECTORIES(third_party/tsANN/include)
AUX_SOURCE_DIRECTORY(third_party/tsANN/src SOURCES)
AUX_SOURCE_DIRECTORY(third_party/AntTweakBar SOURCES)
INCLUDE_DIRECTORIES(third_party/AntTweakBar/include)

ADD_LIBRARY(geex ${SOURCES})

ADD_DEFINITIONS(-DD3D10_IGNORE_SDK_LAYERS)

TARGET_LINK_LIBRARIES(geex ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(geex freeglut)
SET_TARGET_PROPERTIES(geex PROPERTIES LINK_FLAGS "/INCREMENTAL")

